# fs2open

./: CMakeLists.txt  configure.ac
cmake/: DefineCPackGenerators.cmake  DefineCompilerFlags.cmake  DefineGameOptions.cmake  FindOgg.cmake  FindTheora.cmake  FindVorbis.cmake
code/: CMakeLists.txt
code/controlconfig/: controlsconfig.h
code/fred2/: fred.rc  sexp_tree.cpp
code/freespace2/: freespace.cpp
code/missionui/: redalert.cpp
code/parse/: sexp.cpp
code/pilotfile/: csg.cpp
code/ship/: ship.cpp
code/wxfred2/: wxFRED.fbp  wxfred.xrc
libjpeg/: CMakeLists.txt
lua/: CMakeLists.txt
projects/MSVC_2005/: Fred2.vcproj  Freespace2.vcproj  code.vcproj  wxFRED2.vcproj
projects/MSVC_2008/: Fred2.vcproj  Freespace2.vcproj  code.vcproj
projects/MSVC_2010/: Fred2.vcxproj  Freespace2.vcxproj  code.vcxproj  wxFRED2.vcxproj
projects/MSVC_2011/: Fred2.vcxproj  Freespace2.vcxproj  code.vcxproj  libjpeg.vcxproj  liblua.vcxproj  libpng.vcxproj  wxFRED2.vcxproj  zlib.vcxproj
projects/MSVC_6/: Fred2.dsp  Freespace2.dsp  code.dsp  wxFRED2.dsp
